--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -36,6 +36,6 @@
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="reminder_root"></div>
+		<div id="deadline_root"></div>
 	</body>
 </html>
