update index dependencies

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,30 +2,32 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/assets/favicon.ico" />
+		<link rel="icon" href="https://reminders.zuri.chat/assets/favicon.ico" />
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="%PUBLIC_URL%/assets/favicon-32x32.png"
+			href="https://reminders.zuri.chat/assets/favicon-32x32.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="96x96"
-			href="%PUBLIC_URL%/assets/favicon-96x96.png"
+			href="https://reminders.zuri.chat/assets/favicon-96x96.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="%PUBLIC_URL%/assets/favicon-16x16.png"
+			href="https://reminders.zuri.chat/assets/favicon-16x16.png"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Reminder plugin for zuri.chat" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link
+			rel="apple-touch-icon"
+			href="https://reminders.zuri.chat/logo192.png"
+		/>
 		<title>Reminders: Zuri.chat</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
